--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,6 @@ ul, li {
 
 #suggestions li, #suggestions p {
     font-size: 36px;
-    color: #999;
     width: 500px;
     margin: 1em auto;
 }
@@ -49,11 +48,11 @@ ul, li {
     color: #555;
 }
 
-#suggestions li span.icon-font {
+#suggestions li a span.icon-font {
     width: 60px;
+    color: #999;
     display: inline-block;
     float: left;
-    transition: color .3s;
 }
 
 #suggestions li::after {
@@ -70,8 +69,7 @@ ul, li {
     color: #555;
 }
 
-#suggestions li:hover a,
-#suggestions li:hover span.icon-font {
+#suggestions li:hover a {
     color: #4682B4;
 }
 
@@ -79,6 +77,8 @@ ul, li {
     padding-top: 12px;
     padding-left: 62px;
     font-size: 16px;
+    display: block;
+    color: #999;
 }
 
 #copyright {
