--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,15 @@ h1 {
     border-bottom: 1px dashed #777;
 }
 
+.icon-font:before {
+    margin: 0;
+}
+
 h1 span.icon-font {
     font-size: 64px;
-    vertical-align: top;
+    text-align: left;
     color: #aaa;
+    padding-right: 12px;
     position: relative;
     top: 5px;
 }
@@ -38,7 +43,7 @@ ul, li {
 
 #suggestions li, #suggestions p {
     font-size: 36px;
-    width: 500px;
+    width: 480px;
     margin: 1em auto;
 }
 
